# FiveCrowns

./: CMakeLists.txt  Card.cpp  Card.h  CardCollection.h  CardInterface.h  CardPile.cpp  CardPile.h  CompareCardByValue.cpp  CompareCardByValue.h  Computer.cpp  Computer.h  DataLayer.cpp  DataLayer.h  Deck.cpp  Deck.h  DiscardPile.cpp  DiscardPile.h  DrawPile.cpp  DrawPile.h  Game.cpp  Game.h  Hand.cpp  Hand.h  Human.cpp  Human.h  IGoOut.h  Joker.cpp  Joker.h  Player.cpp  Player.h  Round.cpp  Round.h  UI.cpp  UI.h  main.cpp
